--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>belajar pasti bisa</title>
   </head>
   <body>
     <h1>belajar push staging</h1>
