--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>belajar push staging</h1>
-    <h2>belajar git</h2>
-    <h3>belajar git</h3>
+    <h2>belajar push staging 2</h2>
+    <h3>belajar push staging 3</h3>
     <h4>belajar git</h4>
   </body>
 </html>
